[package]
name = "rust_migration"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
warp = "^0.3"
tokio = { version = "^1", features = ["full"] }
async-trait = "0.1.83"
async_once = "0.2.6"
dotenv = "0.15.0"
lazy_static = "1.5.0"
pwhash = "1.0.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
sqlx = {version = "0.8.2", features = ["migrate", "postgres", "runtime-tokio-rustls", "uuid", "chrono"]}
uuid = {version = "1.11.0", features = ["serde", "v4"]}
thiserror = "2.0.9"
